<?xml version="1.0" encoding="utf-8"?>
<!--  
Copyright (c) 2012, Apps4Av Inc. (apps4av.com) 
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

    * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
    *     * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
    *
    *     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<resources>

    <string name="app_name">Avare External I/O Plugin</string>
    <string name="Connect">Connect</string>
    <string name="Start">Start</string>
    <string name="Save">Save</string>
    <string name="Saving">Saving</string>
    <string name="Stop">Stop</string>
    <string name="Avare">Avare</string>
    <string name="Connected">Avare Connected and Linked. Make sure the phone/tablet internal GPS is disabled.</string>
    <string name="NotConnected">Avare Not Connected</string>
    <string name="ADSB">ADSB</string>
    <string name="ADSBWifi">ADSB WiFi</string>
    <string name="XPlane">XPlane</string>
    <string name="MSFS">MSFS</string>
    <string name="GPSSIM">GPS Sim</string>
    <string name="USBIN">USB In</string>
    <string name="XPlanePort">49002</string>
    <string name="WifiPort">43211</string>
    <string name="Exit">Exit</string>
    <string name="Apply">Apply</string>
    <string name="FlyTo">Fly To Destination (if available)</string>
    <string name="LandAt">Land at Destination (if available)</string>
    <string name="Lat">Latitude\u00b0</string>
    <string name="Lon">Longitude\u00b0</string>
    <string name="Heading">Heading\u00b0</string>
    <string name="Altitude">Altitude ft</string>
    <string name="Speed">Speed kt</string>
    <string name="File">/mnt/sdcard/input.bin</string>
    <string name="FileSave">/mnt/sdcard/out.bin</string>
    <string name="Output">---- Output ----\n</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Listen">Listen</string>
    <string name="DescFS">Connect to XPlane, Flightgear on WIFI</string>
    <string name="DescMSFS">Connect to MSFS on WIFI-NMEA</string>
    <string name="DescGPSSim">Simulate GPS (Lat/Lon changes only take effect after Stop/Start, all other changes take effect with Apply)</string>
    <string name="DescExt">Connect to GPS/ADSB units on Bluetooth</string>
    <string name="DescExtWifi">Connect to GPS/ADSB units on WiFi (Broadcast on Managed Network)</string>
    <string name="DescFile">Feed NMEA / ADSB data from a binary file</string>
    <string name="DescAP">Connect to autopilots on Bluetooth</string>
    <string name="DescUSBIN">Connect to GPS/ADSB units on USB Serial</string>
    <string name="Status">Status</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="WIFI">WIFI</string>
    <string name="AP">Auto Pilot</string>
    <string name="Play">Play</string>
    <string name="Secure">Secure</string>
</resources>